# fpga-pipe-cnn

./: CMakeLists.txt  README.md
cmake/: FindIntelFPGAOpenCL.cmake  de10-nano-toolchain.cmake
device/: conv2d_v1.cl  sobel.cl
host/: pipe_cnn.cpp
